--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,23 +2,22 @@
   <div class="container-fluid h-custom">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-md-9 col-lg-6 col-xl-5">
-        <h2 class="mb-4 text-center myanimation" style="font-family: 'Roboto', sans-serif; font-size: 26px;" >"No compres uno de raza, adopta a uno sin casa"</h2>
+        <h2 class="mb-4 text-center text-shadow-drop-center" style="font-family: 'Roboto', sans-serif; font-size: 26px;" >"No compres uno de raza, adopta a uno sin casa"</h2>
         <img src="../../assets/img/close-up-on-veterinarian-taking-care-of-dog.jpg"
           class="img-fluid" alt="Sample image" style="border-radius: 1rem; box-shadow: -7px 9px 21px -2px rgba(0,0,0,0.41);">
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-        <form>
           <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
             <p class="lead fw-normal mb-0 me-3">Sign in with</p>
             <button type="button" class="btn btn-primary btn-floating mx-1">
               <i class="fab fa-facebook-f" (click)="noFunciona($event)"></i>
             </button>
 
-            <button type="button" class="btn btn-primary btn-floating mx-1" (click)="noFunciona($event)">
+            <button type="button" class="btn btn-primary btn-floating mx-1" (click)="noFunciona( $event )">
               <i class="fab fa-twitter"></i>
             </button>
 
-            <button type="button" class="btn btn-primary btn-floating mx-1" (click)="noFunciona($event)">
+            <button type="button" class="btn btn-primary btn-floating mx-1" (click)="noFunciona( $event )">
               <i class="fab fa-linkedin-in"></i>
             </button>
           </div>
@@ -29,37 +28,35 @@
 
           <!-- Email input -->
           <div class="form-outline mb-4">
-            <input type="email" id="form3Example3" class="form-control form-control-lg"
-              placeholder="Enter a valid email address" />
-            <label class="form-label" for="form3Example3">Email address</label>
+            <input id="form3Example3" class="form-control form-control-lg"
+              placeholder="Ingresa el code ID" type="number" [(ngModel)]="userId" (input)="checkCode( $event )" >
+            <label class="form-label" for="form3Example3">Id code</label>
           </div>
 
           <!-- Password input -->
           <div class="form-outline mb-3">
-            <input type="password" id="form3Example4" class="form-control form-control-lg"
-              placeholder="Enter password" />
-            <label class="form-label" for="form3Example4">Password</label>
+            <input type="text" id="form3Example4" class="form-control form-control-lg"
+              placeholder="Ingresa el usuario" [(ngModel)]="username" />
+            <label class="form-label" for="form3Example4">Username</label>
           </div>
 
           <div class="d-flex justify-content-between align-items-center">
             <!-- Checkbox -->
             <div class="form-check mb-0">
-              <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" (click)="noFunciona($event)">
+              <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" [(ngModel)]="rememberMe" />
               <label class="form-check-label" for="form2Example3">
                 Remember me
               </label>
             </div>
-            <a href="#" class="text-body" (click)="noFunciona($event)">Forgot password?</a>
+            <a href="#" class="text-body" (click)="noFunciona( $event )">Forgot password?</a>
           </div>
 
           <div class="text-center text-lg-start mt-4 pt-2">
             <button type="button" class="btn btn-primary btn-lg"
-              style="padding-left: 2.5rem; padding-right: 2.5rem; margin: 15px 11rem;" (click)="noFunciona($event)">Login</button>
+              style="padding-left: 2.5rem; padding-right: 2.5rem; margin: 15px 11rem;" (click)="login()">Login</button>
             <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a
-              href="#" class="link-primary opacity-75" (click)="noFunciona($event)">Register</a></p>
+              href="#" class="link-primary opacity-75" (click)="noFunciona( $event )">Register</a></p>
           </div>
-
-        </form>
       </div>
     </div>
   </div>
