--- a/src/app/myPets/myPets.component.html
+++ b/src/app/myPets/myPets.component.html
@@ -1,17 +1,3 @@
-<!-- Just an image -->
-<nav class="navbar navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" [routerLink]="['/']">
-      <img
-        src="../../assets/img/Mi proyecto.png"
-        height="50"
-        alt="Logo"
-        loading="lazy"
-      />
-    </a>
-  </div>
-</nav>
-
 <div class="spinner" *ngIf="loading">
   <div></div>
   <div></div>
@@ -24,15 +10,6 @@
   <div class="row">
     <div class="col-12 d-flex justify-content-between">
       <h1 class="text-center">Mascotas sin hogar</h1>
-      <!-- Button trigger modal -->
-      <button
-        type="button"
-        class="btn btn-primary"
-        data-bs-toggle="modal"
-        data-bs-target="#exampleModal"
-      >
-        Crear mascota
-      </button>
     </div>
   </div>
   <div class="row mt-5">
@@ -43,6 +20,7 @@
             <th scope="col">Nombre</th>
             <th scope="col">Edad</th>
             <th scope="col">Tipo</th>
+            <th scope="col">Opcion</th>
           </tr>
         </thead>
         <tbody>
@@ -50,6 +28,24 @@
             <td>{{ pet.name }}</td>
             <td>{{ pet.age }} años</td>
             <td>{{ pet.type }}</td>
+            <td>
+              <button
+                type="button"
+                class="btn btn-primary"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+                (click)="selectPet(pet.code)"
+              >
+                editar
+              </button>
+              <button
+                type="button"
+                class="btn btn-danger ms-4"
+                (click)="deletePet(pet.code)"
+              >
+                Eliminar
+              </button>
+            </td>
           </tr>
         </tbody>
       </table>
@@ -89,34 +85,14 @@
             [(ngModel)]="name"
           />
         </div>
-        <div class="form-group">
-          <label for="age">Edad</label>
-          <input
-            type="number"
-            class="form-control"
-            id="age"
-            placeholder="Edad"
-            [(ngModel)]="age"
-          />
-        </div>
-        <div class="form-group">
-          <label for="type">Tipo</label>
-          <select
-            class="form-select"
-            aria-label="Default select example"
-            [(ngModel)]="type"
-          >
-            <option selected value="">Selecciona un tipo</option>
-            <option value="perro">Perro</option>
-            <option value="gato">Gato</option>
-          </select>
-        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
           Close
         </button>
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="addPet()">Save changes</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="updatePetName()">
+          Save changes
+        </button>
       </div>
     </div>
   </div>
