--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar ps-3 pe-3 pb-3 shadow container mt-3 radius-5">
   <div class="container">
-    <img src="../../assets/img/Mi proyecto.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top myimg">
+    <img src="../../assets/img/Mi proyecto.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top myimg" [routerLink]="['/']">
     
     <!-- redirec to login/profesor -->
     <div class="d-flex justify-content-end">
